# cxt

./: .SRCINFO  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  benchmark.sh  generate_mock_repo.sh  install.sh  run-tests.sh  uninstall.sh
.github/workflows/: release.yml  run-tests.yml  test.yml
src/: cli.rs  clipboard.rs  content_aggregator.rs  formatter.rs  image_handler.rs  lang.rs  main.rs  notebook.rs  output_handler.rs  path_formatter.rs  token_counter.rs  tui.rs
src/tui/: app.rs  events.rs  mod.rs  render.rs  theme.rs
tests/: cli_smoke.rs
