[package]
name = "cxt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Aggregates file/directory contents and sends them to the clipboard, a file, or stdout"
license = "MIT"
repository = "https://github.com/yourusername/cxt"
keywords = ["clipboard", "file", "aggregation", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
arboard = "3.2"
anyhow = "1.0"
walkdir = "2.4"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10" 