[package]
name = "cxt"
version = "0.1.1"
edition = "2021"
authors = ["Vaibhav Mattoo <vaibhavmattoo1@gmail.com>"]
description = "Aggregates file/directory contents and sends them to the clipboard, a file, or stdout"
license = "MIT"
repository = "https://github.com/vaibhav-mattoo/cxt"
keywords = ["clipboard", "file", "aggregation", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/vaibhav-mattoo/cxt"
exclude = ["/target", "/*.rs.bk", "run-tests.sh"]


[dependencies]
clap = { version = "4.4", features = ["derive"] }
arboard = "3.2"
anyhow = "1.0"
walkdir = "2.4"
dialoguer = "0.11"
pathdiff = "0.2.3"
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10" 

[package.metadata.deb]
maintainer = "Vaibhav Mattoo <vaibhavmattoo1@gmail.com>"
copyright = "2025, Vaibhav Mattoo"
license-file = ["LICENSE"]
extended-description = """
cxt is a command-line tool that aggregates the contents of files and directories into your clipboard, a file, or stdout. It's perfect for providing project context to AI chatbots or sharing code context with others.
"""
section = "utils"
priority = "optional"
assets = [
    ["target/release/cxt", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cxt/", "644"],
    ["LICENSE", "usr/share/licenses/cxt/", "644"],
]
depends = "$auto"
