[package]
name = "cxt"
version = "0.1.7"
edition = "2021"
authors = ["Vaibhav Mattoo <vaibhavmattoo1@gmail.com>"]
description = "Aggregates file/directory contents and sends them to the clipboard, a file, or stdout"
license = "MIT"
repository = "https://github.com/vaibhav-mattoo/cxt"
keywords = ["clipboard", "file", "aggregation", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/vaibhav-mattoo/cxt"
exclude = ["/target", "/*.rs.bk", "run-tests.sh"]


[dependencies]
clap = { version = "4.6", features = ["derive"] }
arboard = "3.6"
anyhow = "1.0"
dialoguer = "0.12"
pathdiff = "0.2.3"
ratatui = "0.30"
crossterm = "0.29"
wild = "2"
atty = "0.2"
flate2 = "1"
ignore = "0.4"
globset = "0.4.18"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "gif",
  "bmp",
  "webp",
  "tiff",
  "ico",
] }
tiktoken-rs = "0.12"
tui-tree-widget = "0.24"
fuzzy-matcher = "0.3"
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

[package.metadata.deb]
maintainer = "Vaibhav Mattoo <vaibhavmattoo1@gmail.com>"
copyright = "2025, Vaibhav Mattoo"
license-file = ["LICENSE"]
extended-description = """
cxt is a command-line tool that aggregates the contents of files and directories into your clipboard, a file, or stdout. It's perfect for providing project context to AI chatbots or sharing code context with others.
"""
section = "utils"
priority = "optional"
assets = [
  [
    "target/release/cxt",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/cxt/",
    "644",
  ],
  [
    "LICENSE",
    "usr/share/licenses/cxt/",
    "644",
  ],
]
depends = "$auto"
